--- a/README
+++ b/README
@@ -8,8 +8,4 @@ Dependencies:
   * Agda version 2.5.1
   * Agda standard library v0.12
 
-NB: There is no correspondence between the lemma numbering in the paper and
-that in the formalisation, having been based on a previous write-up of the
-results. However, the main results (triangulation for big-step/frame stack)
-are at the bottom of the respective files (tri-big-step.agda/tri-frm-stk.agda)
-under the "Summary" heading.
+The main results are summarised in triangulating-context-lemmas.agda.
